# Exercise

./: .clang-format  .editorconfig  .gitignore  AllLeetcodeHere.sln  BinaryIndexedTree.cpp  BinaryIndexedTree.h  CMakeLists.txt  CMakePresets.json  Leetcode.cpp  Leetcode.h  Notes.cpp  Notes.h  README.md  Solution01.cpp  Solution01.h  Solution02.cpp  Solution02.h  Solution03.cpp  Solution03.h  Solution04.cpp  Solution04.h  TrieTree.cpp  TrieTree.h
.cache/clangd/index/: BinaryIndexedTree.cpp.2BC79E023CE6439D.idx  BinaryIndexedTree.h.4C685FF9B8083FEC.idx  Notes.cpp.6B00C7541D30544F.idx  Notes.h.CB1FDB7A07DBEA88.idx  Solution01.cpp.0BEBCF08724A62AA.idx  Solution01.h.4A8AE340A72AF70C.idx  Solution02.cpp.7B9F8D01AFF00208.idx  Solution02.h.235C569E008E7DC6.idx  Solution03.cpp.2820F2C5F42B94F4.idx  Solution03.h.65625A53ED9A74EC.idx  Solution04.cpp.1323123A8B0E8206.idx  Solution04.h.17E3978F9233CE5C.idx  TrieTree.cpp.23B4849E12A76787.idx  TrieTree.h.FB831A7F81720EA1.idx  main.cpp.6115AEDC25FADAC8.idx  pat.cpp.6797E245BF5F1C80.idx  pat.h.0A44004316958AD9.idx
AllLeetcodHere/: AllLeetcodHere.vcxproj  AllLeetcodHere.vcxproj.filters  BinaryIndexedTree.h  Code0409.cpp  Notes.cpp  Notes.h  Solution01.cpp  Solution01.h  Solution02.cpp  Solution02.h  Solution03.cpp  Solution03.h  main.cpp
AllLeetcodeHere/: AllLeetcodHere.vcxproj  BinaryIndexedTree.cpp  Notes.h  Solution01.cpp  Solution01.h  Solution02.cpp  Solution03.cpp  Solution04.cpp  Solution04.h  TrieTree.cpp  TrieTree.h
include/: BinaryIndexedTree.h  Notes.h  Solution01.h  Solution02.h  Solution03.h  Solution04.h  TrieTree.h  main.h  pat.h
src/: BinaryIndexedTree.cpp  Notes.cpp  Solution01.cpp  Solution02.cpp  Solution03.cpp  Solution04.cpp  TrieTree.cpp  main.cpp  pat.cpp
test/: testAdd.cpp
